--- a/PythonModule/Example.ipynb
+++ b/PythonModule/Example.ipynb
@@ -125,7 +125,7 @@
     "\n",
     "m = coo_matrix((vals, (rows, cols)), shape=shape)\n",
     "ax = plot_coo_matrix(m)\n",
-    "#ax.figure.show()  - not necessary and inline not supported (use in python scripts)\n"
+    "#ax.figure.show()  - not necessary and inline not supported (use in python scripts)"
    ]
   },
   {
@@ -146,7 +146,7 @@
     "#SVD\n",
     "k = 100\n",
     "\n",
-    "U, s, V = svds(m.asfptype(), k=k)\n"
+    "U, s, V = svds(m.asfptype(), k=k)"
    ]
   },
   {
@@ -168,7 +168,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   }
  ],
  "metadata": {
@@ -180,7 +182,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 3.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
@@ -191,5 +193,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 0
 }
