TF-IDF and SVD in Lib
including example/test coding
TF-IDF will also be re-written as class to store vocabulary for query
conversion

--- a/PythonModule/TF-IDF.ipynb
+++ b/PythonModule/TF-IDF.ipynb
@@ -20,6 +20,9 @@
     "import matplotlib.pyplot as plt\n",
     "from scipy.sparse import coo_matrix\n",
     "from scipy.sparse.linalg import svds\n",
+    "from scipy.linalg import inv, norm\n",
+    "import math\n",
+    "\n",
     "\n",
     "import json\n",
     "\n",
@@ -54,18 +57,35 @@
     "#Test Daten (dictionary) \n",
     "docs = {    \n",
     "    'file1': ['ein','test','für','Dokument','eins'],    \n",
-    "    'file2': ['ein','weiteres','Dokument'],\n",
-    "    'file3': ['alle','guten','Dinge','sind','drei']\n",
+    "    'file21': ['ein','weiteres','Dokument'],\n",
+    "    'file22': ['ein','weiteres','Dokument'],\n",
+    "    'file3': ['alle','guten','Dinge','sind','drei'],\n",
+    "    'file4': ['ein','test','für','Dokument','drei'], \n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'file1': ['ein', 'test', 'für', 'Dokument', 'eins'],\n",
+       " 'file21': ['ein', 'weiteres', 'Dokument'],\n",
+       " 'file22': ['ein', 'weiteres', 'Dokument'],\n",
+       " 'file3': ['alle', 'guten', 'Dinge', 'sind', 'drei'],\n",
+       " 'file4': ['ein', 'test', 'für', 'Dokument', 'drei']}"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Testing load and save\n",
     "# - Numpy Arrays: https://docs.scipy.org/doc/numpy/reference/generated/numpy.save.html\n",
@@ -92,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -128,12 +148,13 @@
     "nvocab = len(vocab)\n",
     "\n",
     "#Initialize components of COO-Matrix (values, row indizes, col indizes) with emtpy values (for all non-zero elements)\n",
-    "data = np.empty(n_nonzero, dtype=np.intc)     # all non-zero term frequencies at data[i,k]\n",
+    "data = np.empty(n_nonzero, dtype=np.float32)     # all non-zero term frequencies at data[i,k]\n",
     "rows = np.empty(n_nonzero, dtype=np.intc)     # row index for [i,k]th data item (ith term freq.)\n",
     "cols = np.empty(n_nonzero, dtype=np.intc)     # column index for [i,k]th data item (kth document)\n",
     "\n",
     "#Init index (w.r.t. position in arrays of sparse COO matrix)\n",
-    "ind = 0     \n",
+    "ind = 0   \n",
+    "global_indices = []\n",
     "# go through all documents with their terms\n",
     "for docpath, terms in docs.items():\n",
     "    # find indices into  such that, if the corresponding elements in  were\n",
@@ -143,6 +164,10 @@
     "\n",
     "    # count the unique terms of the document and get their vocabulary indices\n",
     "    uniq_indices, counts = np.unique(term_indices, return_counts=True)\n",
+    "    \n",
+    "    # add (unique) indices of current doc to a list which is later on used for df\n",
+    "    global_indices.extend(uniq_indices)\n",
+    "    \n",
     "    n_vals = len(uniq_indices)  # = number of unique terms\n",
     "    ind_end = ind + n_vals  #  to  is the slice that we will fill with data\n",
     "\n",
@@ -152,15 +177,25 @@
     "    cols[ind:ind_end] = np.repeat(doc_idx, n_vals)  # save it as repeated value\n",
     "\n",
     "    ind = ind_end  # resume with next document -> add data to the end\n",
-    "    \n",
-    "dtm = coo_matrix((data, (rows, cols)), shape=(nvocab, ndocs), dtype=np.intc)\n",
+    "\n",
+    "#calculate the term df by counting the occurence of the unqiue indices per document -> result is sorted by index\n",
+    "global_unique_indices, global_counts = np.unique(global_indices, return_counts=True)\n",
+    "\n",
+    "#calculation of idf\n",
+    "idf = ndocs/global_counts\n",
+    "\n",
+    "#select idf according to indices in \"rows\" vector for DTM and multiply it with \"data\"(tf) vector -> tf-idf\n",
+    "data = np.multiply(data,idf[rows])\n",
+    "\n",
+    "#Construct DTM as COO Matrix\n",
+    "dtm = coo_matrix((data, (rows, cols)), shape=(nvocab, ndocs), dtype=np.float32)\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -169,20 +204,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0 1 0]\n",
-      " [0 0 1]\n",
-      " [1 1 0]\n",
-      " [0 0 1]\n",
-      " [0 0 1]\n",
-      " [0 1 0]\n",
-      " [1 0 0]\n",
-      " [0 0 1]\n",
-      " [0 0 1]\n",
-      " [1 1 0]\n",
-      " [0 1 0]]\n",
-      "['für' 'sind' 'Dokument' 'Dinge' 'alle' 'eins' 'weiteres' 'drei' 'guten'\n",
-      " 'ein' 'test']\n",
-      "['file2' 'file1' 'file3']\n"
+      "[[ 0.    0.    0.    0.    5.  ]\n",
+      " [ 0.    0.    0.    5.    0.  ]\n",
+      " [ 2.5   0.    0.    2.5   0.  ]\n",
+      " [ 1.25  1.25  1.25  1.25  0.  ]\n",
+      " [ 0.    0.    0.    0.    5.  ]\n",
+      " [ 2.5   0.    0.    2.5   0.  ]\n",
+      " [ 1.25  1.25  1.25  1.25  0.  ]\n",
+      " [ 0.    0.    0.    0.    5.  ]\n",
+      " [ 0.    0.    0.    0.    5.  ]\n",
+      " [ 2.5   0.    0.    0.    2.5 ]\n",
+      " [ 0.    2.5   2.5   0.    0.  ]]\n",
+      "['guten' 'eins' 'test' 'ein' 'alle' 'für' 'Dokument' 'sind' 'Dinge' 'drei'\n",
+      " 'weiteres']\n",
+      "['file4' 'file21' 'file22' 'file1' 'file3']\n"
      ]
     }
    ],
@@ -190,6 +225,312 @@
     "print(dtm.toarray())\n",
     "print(vocab)\n",
     "print(docpaths)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "k = 4\n",
+    "\n",
+    "U, s, V = svds(dtm.asfptype(), k=k)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "vec = dtm.toarray()[:,0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "dv = (inv(np.diag(s)).dot(U.transpose())).dot(vec)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "sim = (V.transpose().dot(dv))/(np.sqrt(np.diag(V.transpose().dot(V)))*norm(dv))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  1.00000012e+00,   5.26835713e-08,   5.26835677e-08,\n",
+       "        -1.78813963e-07,   5.96046519e-08], dtype=float32)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "t = np.vstack([docpaths,sim])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  1.00000012e+00,   5.96046519e-08,   5.26835713e-08,\n",
+       "         5.26835677e-08,  -1.78813963e-07], dtype=float32)"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorter = np.argsort(sim)[::-1]\n",
+    "sim[sorter]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## TESTS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from scipy.linalg import svd, inv\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "U, s, V = svd(dtm.todense())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  1.03311806e+01,   7.10256338e+00,   4.25720739e+00,\n",
+       "         3.49234796e+00,   2.52165080e-07], dtype=float32)"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 4, 0, 10.331181]"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXgAAAD8CAYAAAB9y7/cAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAADJxJREFUeJzt3W+IZfddx/H3Z7Mp7TTFKhlqTLK7eVACMYjJDiE2UErS\nQkxD44MiKZNai7AoqKkKJTVg8MGCD6RURZQhjUY6pkoaNITWWtqUImh0Nok2yVYNNdmmpu7UalJd\nMcZ8fXDv2mS7uzNzz9mdud99v2CYe8+cO+f32x+8OXv/nElVIUnqZ9d2D0CSdGYYeElqysBLUlMG\nXpKaMvCS1JSBl6SmDLwkNWXgJakpAy9JTe0+mwdLLizY9//39+8/m0eXpPl06NChb1bV4lYfd1YD\nP4n7GgB798La2tk9uiTNoyTPzvK4bXmKZmEBDh7cjiNL0rnjrAd+715YWYHl5bN9ZEk6t2z4FE2S\ne4CbgaNVdeV02/cBf8TkOZdngB+vqn/b6Hft3+/TMpJ0tmzmDP73gRtP2HYH8Pmqeivw+el9SdIO\nsmHgq+pLwLdO2HwLcO/09r3Aj408LknSQLM+B/+Wqnp+evsbwFtOtWOSA0nWkqytr6/PeDhJ0lYN\nfpG1Jn8S6pR/FqqqVqpqqaqWFhe3/DZOSdKMZg38vyS5CGD6/eh4Q5IkjWHWwD8IfGB6+wPAn44z\nHEnSWDYMfJL7gL8ELk/yXJKfAn4NeFeSfwTeOb0vSdpBNnwffFW97xQ/umHksUiSRuTVJCWpKQMv\nSU0ZeElqysBLUlMGXpKaMvCS1JSBl6SmDLwkNWXgJakpAy9JTRl4SWrKwEtSUwZekpoy8JLUlIGX\npKYMvCQ1ZeAlqSkDL0lNGXhJasrAS1JTBl6SmjLwktSUgZekpgy8JDVl4CWpKQMvSU0ZeElqysBL\nUlMGXpKaMvCS1JSBl6SmDLwkNWXgJampQYFP8gtJnkzyRJL7krx+rIFJkoaZOfBJLgZ+HliqqiuB\n84BbxxqYJGmYoU/R7AbekGQ3sAD88/AhSZLGMHPgq+rrwK8DR4DngReq6s9P3C/JgSRrSdbW19dn\nH6kkaUuGPEXzvcAtwGXADwBvTHLbiftV1UpVLVXV0uLi4uwjlSRtyZCnaN4J/FNVrVfV/wAPAG8b\nZ1iSpKGGBP4IcG2ShSQBbgAOjzMsSdJQQ56DfwS4H3gU+PL0d62MNC5J0kC7hzy4qu4C7hppLJKk\nEflJVklqysBLUlMGXpKaMvCS1JSBl6SmDLwkNWXgJakpAy9JTRl4SWrKwEtSUwZeG1pdhX37YNeu\nyffV1e0ekaTNGHQtGvW3ugoHDsCxY5P7zz47uQ+wvLx945K0Mc/gdVp33vmduB937Nhku6SdzcDr\ntI4c2dp2STuHgddp7dmzte2Sdg4Dr9M6eBAWFl67bWFhsl3SzmbgdVrLy7CyAnv3QjL5vrLiC6zS\nPPBdNNrQ8rJBl+aRZ/CS1JSBl6SmDLwkNWXgJakpAy9JTRl4SWrKwEtSUwZekpoy8JLUlIGXpKYM\nvCQ1ZeAlqSkDL0lNGXhJasrAS1JTgwKf5M1J7k/ylSSHk/zIWAOTJA0z9A9+/AbwZ1X13iSvAxY2\neoAk6eyYOfBJvgd4O/CTAFX1EvDSOMOSJA015Cmay4B14PeSPJbk7iRvHGlckqSBhgR+N3A18DtV\ndRXwn8AdJ+6U5ECStSRr6+vrAw4nSdqKIYF/Dniuqh6Z3r+fSfBfo6pWqmqpqpYWFxcHHE6StBUz\nB76qvgF8Lcnl0003AE+NMipJ0mBD30Xzc8Dq9B00XwU+OHxIkqQxDAp8VT0OLI00FknSiPwkqyQ1\nZeAlqSkDL0lNGXhJasrAS1JTBl6SmjLwktSUgZekpgy8JDVl4CWpKQMvSU0ZeElqysBLUlMGXpKa\nMvCS1JSBl6SmDLwkNWXgJakpAy9JTRl4SWrKwEtSUwZekpoy8JLUlIGXpKYMvCQ1ZeAlqSkDL0lN\nGXhJasrAS42trsK+fbBr1+T76up2j0hn0+7tHoCkM2N1FQ4cgGPHJveffXZyH2B5efvGpbPHM3ip\nqTvv/E7cjzt2bLJd5wYDLzV15MjWtqsfAy81tWfP1rarn8GBT3JekseSPDTGgCSN4+BBWFh47baF\nhcl2nRvGOIO/HTg8wu+RNKLlZVhZgb17IZl8X1nxBdZzyaDAJ7kEeDdw9zjDkTSm5WV45hl45ZXJ\nd+N+bhl6Bv8x4MPAKyOMRZI0opkDn+Rm4GhVHdpgvwNJ1pKsra+vz3o4SdIWDTmDvw54T5JngE8C\n1yf5xIk7VdVKVS1V1dLi4uKAw0mStmLmwFfVR6rqkqraB9wKfKGqbhttZJKkQXwfvCQ1Ncq1aKrq\ni8AXx/hdkqRxeAYvSU0ZeElqysBL0g51/Hr+sH//LI/3evCStAOdeD3/WXgGL0k70Mmu579VBl6S\ndqAxrttv4CVpBxrjuv0GXpJ2oJNdz3+rDLwk7UCvvp7/rAy8JO1Qx6/nD4dOe9XeUzHwktSUgZek\npgy8JDVl4CWpKQMvSU0ZeElqysBLUlMGXpKaMvCS1JSBl6SmDLwkNWXgJakpAy9JTRl4SWrKwEtS\nUwZekpoy8JLUlIGXpKYMvCQ1ZeAlqSkDL0lNGXhJasrAS1JTMwc+yaVJHk7yVJInk9w+5sAkScPs\nHvDYl4FfqqpHk7wJOJTkc1X11EhjkyQNMPMZfFU9X1WPTm9/GzgMXDzWwCRJw4zyHHySfcBVwCNj\n/D5J0nCDA5/kAuBTwIeq6sWT/PxAkrUka+vr60MPJ0napEGBT3I+k7ivVtUDJ9unqlaqaqmqlhYX\nF4ccTpK0BUPeRRPg48DhqvroeEOSJI1hyBn8dcD7geuTPD79ummkcUmSBpr5bZJV9RdARhyLJGlE\nfpJVkpoy8JLUlIGXpKYMvCQ1ZeAlqSkDL0lNGXhJasrAS1JTBl6SmjLwktSUgZekpgy8JDVl4CWp\nKQMvSU0ZeElqysBLUlMGXpKaMvCS1JSBl6SmDLwkNWXgJakpAy9JTRl4SWrKwEtSUwZekpoy8JLU\nlIGXpKYMvCQ1ZeAlqSkDL0lNGXhJasrAS1JTBl6SmhoU+CQ3Jvn7JE8nuWOsQUmShps58EnOA34b\n+FHgCuB9Sa4Ya2CSpGGGnMFfAzxdVV+tqpeATwK3jDMsSdJQQwJ/MfC1V91/brpNkrQD7D7TB0hy\nADgwvfvfSZ4408fcRhcC39zuQZxBnefXeW7g/Obd5bM8aEjgvw5c+qr7l0y3vUZVrQArAEnWqmpp\nwDF3NOc3vzrPDZzfvEuyNsvjhjxF8zfAW5NcluR1wK3AgwN+nyRpRDOfwVfVy0l+FvgscB5wT1U9\nOdrIJEmDDHoOvqo+DXx6Cw9ZGXK8OeD85lfnuYHzm3czzS9VNfZAJEk7gJcqkKSmRg98knuSHD3V\n2yEz8ZvTyxv8XZKrxx7DmbSJ+b0jyQtJHp9+/crZHuOsklya5OEkTyV5MsntJ9lnbtdvk/Ob5/V7\nfZK/TvK30/n96kn2mef128z85nb9YHKFgCSPJXnoJD/b+tpV1ahfwNuBq4EnTvHzm4DPAAGuBR4Z\newxn8msT83sH8NB2j3PGuV0EXD29/SbgH4AruqzfJuc3z+sX4ILp7fOBR4BrG63fZuY3t+s3Hf8v\nAn94sjnMsnajn8FX1ZeAb51ml1uAP6iJvwLenOSiscdxpmxifnOrqp6vqkent78NHOa7P508t+u3\nyfnNrema/Mf07vnTrxNfZJvn9dvM/OZWkkuAdwN3n2KXLa/ddjwHfy5c4uBt0/9CfSbJD273YGaR\nZB9wFZOzpFdrsX6nmR/M8fpN/4v/OHAU+FxVtVq/TcwP5nf9PgZ8GHjlFD/f8tr5Iuv4HgX2VNUP\nAb8F/Mk2j2fLklwAfAr4UFW9uN3jGdsG85vr9auq/62qH2byyfJrkly53WMa0ybmN5frl+Rm4GhV\nHRrz925H4Dd1iYN5VVUvHv9vZE0+J3B+kgu3eVibluR8JvFbraoHTrLLXK/fRvOb9/U7rqr+HXgY\nuPGEH831+h13qvnN8fpdB7wnyTNMrsx7fZJPnLDPltduOwL/IPAT01eErwVeqKrnt2EcZ0SS70+S\n6e1rmPwb/+v2jmpzpuP+OHC4qj56it3mdv02M785X7/FJG+e3n4D8C7gKyfsNs/rt+H85nX9quoj\nVXVJVe1jctmXL1TVbSfstuW1G/1qkknuY/JK9oVJngPuYvJiCFX1u0w++XoT8DRwDPjg2GM4kzYx\nv/cCP5PkZeC/gFtr+hL4HLgOeD/w5enznAC/DOyBFuu3mfnN8/pdBNybyR/j2QX8cVU9lOSnocX6\nbWZ+87x+32Xo2vlJVklqyhdZJakpAy9JTRl4SWrKwEtSUwZekpoy8JLUlIGXpKYMvCQ19X/wM0Bj\nH+mKmwAAAABJRU5ErkJggg==\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x183e1d0b0b8>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "plt.plot(range(1,k+2),s, 'bo')\n",
+    "plt.axis([1, k, 0, s.max()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  9.67943594e-02,   0.00000000e+00,   0.00000000e+00,\n",
+       "          0.00000000e+00,  -0.00000000e+00],\n",
+       "       [  0.00000000e+00,   1.40794232e-01,   0.00000000e+00,\n",
+       "          0.00000000e+00,  -0.00000000e+00],\n",
+       "       [  0.00000000e+00,   0.00000000e+00,   2.34895766e-01,\n",
+       "          0.00000000e+00,  -0.00000000e+00],\n",
+       "       [  0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
+       "          2.86340296e-01,  -0.00000000e+00],\n",
+       "       [  0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
+       "          0.00000000e+00,   3.96565625e+06]], dtype=float32)"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inv(np.diag(s)) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "shapes (11,11) and (5,5) not aligned: 11 (dim 1) != 5 (dim 0)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-61-739097bdc783>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mU\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdiag\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ms\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mV\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtranspose\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m: shapes (11,11) and (5,5) not aligned: 11 (dim 1) != 5 (dim 0)"
+     ]
+    }
+   ],
+   "source": [
+    "U.dot(np.diag(s)).dot(V.transpose())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ -3.39647196e-03,  -1.85402334e-02,  -7.70835951e-02,\n",
+       "         -3.39643238e-03,  -9.96840537e-01],\n",
+       "       [  1.31829843e-01,   8.53426278e-01,   4.83705044e-01,\n",
+       "          1.31829888e-01,  -5.41749895e-02],\n",
+       "       [ -6.63692176e-01,   3.01057965e-01,  -1.68069676e-01,\n",
+       "         -6.63691998e-01,   1.19197182e-02],\n",
+       "       [ -2.05236614e-01,  -4.25069571e-01,   8.55476379e-01,\n",
+       "         -2.05236524e-01,  -5.68477400e-02],\n",
+       "       [ -7.07106709e-01,   4.77132787e-08,   7.77709914e-08,\n",
+       "          7.07106948e-01,   8.41412717e-09]], dtype=float32)"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "V"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  1.03311806e+01,   0.00000000e+00,   0.00000000e+00,\n",
+       "          0.00000000e+00,   0.00000000e+00],\n",
+       "       [  0.00000000e+00,   7.10256338e+00,   0.00000000e+00,\n",
+       "          0.00000000e+00,   0.00000000e+00],\n",
+       "       [  0.00000000e+00,   0.00000000e+00,   4.25720739e+00,\n",
+       "          0.00000000e+00,   0.00000000e+00],\n",
+       "       [  0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
+       "          3.49234796e+00,   0.00000000e+00],\n",
+       "       [  0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
+       "          0.00000000e+00,   2.52165080e-07]], dtype=float32)"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.diag(s)"
    ]
   },
   {
