--- a/PythonModule/TF-IDF.ipynb
+++ b/PythonModule/TF-IDF.ipynb
@@ -637,7 +637,7 @@
    "source": [
     "s = np.load(\"../lib/files/\" + \"svd.s.npy\")\n",
     "Ut = np.load(\"../lib/files/\" + \"svd.Ut.npy\")\n",
-    "Vt = np.load(\"../lib/files/\" + \"svd.Vt.npy\")"
+    "V = np.load(\"../lib/files/\" + \"svd.V.npy\")"
    ]
   },
   {
@@ -670,7 +670,7 @@
    },
    "outputs": [],
    "source": [
-    "k = 200\n",
+    "k = 199\n",
     "plt.plot(range(1,k+1),s[::-1], 'bo')\n",
     "plt.axis([1, k, 0, s.max()])"
    ]
@@ -705,7 +705,7 @@
    },
    "outputs": [],
    "source": [
-    "Uk"
+    "s[:-20]"
    ]
   },
   {
@@ -716,7 +716,7 @@
    },
    "outputs": [],
    "source": [
-    "s[:100] = 0"
+    "Uk"
    ]
   },
   {
@@ -800,6 +800,121 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "saved_tdm.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "max(saved_tdm.data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# the histogram of the data\n",
+    "plt.hist(saved_tdm.data)\n",
+    "plt.title(\"Histogram\")\n",
+    "plt.xlabel(\"Value\")\n",
+    "plt.ylabel(\"Frequency\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "saved_tdm.data == min(saved_tdm.data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "saved_tdm.row[saved_tdm.data == max(saved_tdm.data)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "vocab = np.load(\"../lib/files/\" + \"tfidf.vocab.npy\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "vocab[saved_tdm.row[saved_tdm.data >= (max(saved_tdm.data)/10)]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "len(saved_tdm.data[saved_tdm.data >= (max(saved_tdm.data)/10)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "a = [10,100]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "math.log(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
     "collapsed": true
    },
    "outputs": [],
@@ -822,7 +937,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
