--- a/documents/TF-IDF.ipynb
+++ b/documents/TF-IDF.ipynb
@@ -340,12 +340,13 @@
    "outputs": [],
    "source": [
     "from wordcloud import WordCloud\n",
-    "s = np.load(\"../lib/files/\" + \"svd.s.npy\")\n",
-    "Ut = np.load(\"../lib/files/\" + \"svd.Ut.npy\")\n",
-    "V = np.load(\"../lib/files/\" + \"svd.V.npy\")\n",
-    "k = np.load(\"../lib/files/\" + \"svd.k.npy\")\n",
-    "docs = np.load(\"../lib/files/\" + \"svd.docs.npy\")\n",
-    "vocab = np.load(\"../lib/files/\" + \"tfidf.vocab.npy\")\n",
+    "path = \"../lib/files/\"\n",
+    "s = np.load(path + \"svd.s.npy\")\n",
+    "Ut = np.load(path + \"svd.Ut.npy\")\n",
+    "V = np.load(path + \"svd.V.npy\")\n",
+    "k = np.load(path + \"svd.k.npy\")\n",
+    "docs = np.load(path + \"svd.docs.npy\")\n",
+    "vocab = np.load(path + \"tfidf.vocab.npy\")\n",
     "SiUt = inv(np.diag(s)).dot(Ut)"
    ]
   },
@@ -370,6 +371,29 @@
    ],
    "source": [
     "Ut[]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'..'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "os.pardir"
    ]
   },
   {
